--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,38 @@
     <artifactId>poi-ooxml</artifactId>
     <version>5.2.0</version>
 </dependency>
+<dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-bom</artifactId>
+            <version>2.25.0</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
 
- </dependencies>
+<dependency>
+    <groupId>io.qameta.allure</groupId>
+    <artifactId>allure-testng</artifactId>
+    <version>2.25.0</version>
+</dependency>
+
+</dependencies>
+<build>
+    
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.5.4</version>
+        </plugin>
+              <plugin>
+		   <groupId>io.qameta.allure</groupId>
+		   <artifactId>allure-maven</artifactId>
+		   <version>2.12.0</version>
+		</plugin>
+      </plugins>
+    </pluginManagement>
+ 
+   
+  </build>
 </project>
